# BakeryPilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN_PROMPT.md  Makefile  README.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml
agent/: README.md  pyproject.toml
agent/agent/: config.py  graph.py  llm.py  state.py
agent/agent/agents/: __init__.py  demo.py  esg.py  inventory.py  orchestrator.py  procurement.py  scheduler.py  summary.py  weekly_plan.py  yield_intel.py
agent/agent/evaluation/: opik_eval.py
agent/agent/prompts/: intent_classifier.md  negotiation.md  orchestrator.md  seed.py  store.py  weekly_summary.md
agent/agent/tools/: __init__.py  demo_tools.py  esg_tools.py  inventory_tools.py  notify_tools.py  procurement_tools.py  production_tools.py  scheduler_tools.py  summary_tools.py  yield_tools.py
agent/agent/voice/: __init__.py  deepgram_stt.py  verification.py  whisper.py
agent/tests/: conftest.py  test_agents_e2e.py  test_demo_intent.py  test_demo_tools.py  test_hitl_gate.py  test_imports.py  test_production_tools.py  test_scheduler_card_recovery.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/app/: config.py  main.py  mock_data.py
backend/app/api/: __init__.py  action_cards.py  admin.py  alerts.py  chat.py  commodity_prices.py  dashboard.py  demo.py  disruptions.py  esg.py  events.py  facilities.py  forecasts.py  inventory.py  negotiations.py  notifications.py  orders.py  outbound_shipments.py  pallets.py  production.py  retailers.py  schedules.py  stakeholders.py  summaries.py  suppliers.py  users.py  voice.py  yield_intel.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/integrations/: __init__.py  cmms_mock.py  commodity_feed.py  factory.py  mes_mock.py  news_feed.py  sap_mock.py
backend/app/models/: chat.py  common.py  demo.py  esg.py  forecasts.py  inventory.py  notifications.py  orders.py  outbound.py  pallets.py  schedules.py  summaries.py  suppliers.py  yield_intel.py
backend/app/services/: __init__.py  admin_filters.py  app_settings.py  contract_lifecycle.py  data_refresh.py  delivery_window.py  demo_generator.py  disruption_risk.py  esg.py  fefo.py  forecasting.py  landed_cost.py  moq_engine.py  negotiation_drafts.py  network_balancer.py  outbound_fulfillment.py  payment_terms.py  (+10 more)
backend/scripts/: seed_demo.py  seed_fred_prices.py  seed_fx_rates.py  seed_live_data.py  seed_lots.py  seed_synthetic.py  seed_toronto_facilities.py  seed_toronto_retailers.py  seed_toronto_suppliers.py  seed_weather_signals.py
backend/tests/: conftest.py  test_api_action_cards.py  test_api_dashboard.py  test_api_demo.py  test_api_disruptions.py  test_api_esg.py  test_api_facilities.py  test_api_forecasts.py  test_api_inventory.py  test_api_negotiations.py  test_api_notifications.py  test_api_orders.py  test_api_outbound_shipments.py  test_api_pallets.py  test_api_schedules.py  test_api_stakeholders.py  test_api_summaries.py  test_api_suppliers.py  test_api_users.py  test_api_yield_intel.py  test_demo_generator.py  test_health.py  test_schedule_apply.py  test_schedule_fulfillment.py  test_schedule_propose.py
(+175 files in other folders)
