[project]
name = "bakery-pilot-agent"
version = "0.2.0"
description = "LangGraph multi-agent orchestrator for BakeryPilot"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.70",
    "langgraph-checkpoint>=2.0.0",
    "langmem>=0.0.20",
    "langsmith>=0.1.147",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "opik>=1.3.0",
    "pydantic>=2.7.0",
    "pymongo>=4.7.0",
    "motor>=3.4.0",
    "python-dotenv>=1.0.0",
    "deepgram-sdk>=3.7.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
