[project]
name = "bakery-pilot-backend"
version = "0.0.1"
description = "FastAPI backend for BakeryPilot"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
