[project]
name = "bakery-pilot-backend"
version = "0.1.0"
description = "FastAPI backend for BakeryPilot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "bakery-pilot-agent",
    "psycopg2-binary>=2.9.12",
    "greenlet>=3.5.1",
]

[tool.uv.sources]
bakery-pilot-agent = { path = "../agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
